--- a/docTPI/mkdocs.yml
+++ b/docTPI/mkdocs.yml
@@ -1,1 +1,29 @@
-site_name: My Docs
+site_name: Documentations I.FA-P3B
+
+theme:
+  name: material
+
+  palette:
+  
+      # Palette toggle for light mode
+      - media: "(prefers-color-scheme: light)"
+        scheme: default
+        toggle:
+          icon: material/brightness-7
+          name: Switch to dark mode
+  
+      # Palette toggle for dark mode
+      - media: "(prefers-color-scheme: dark)"
+        scheme: slate
+        toggle:
+          icon: material/brightness-4
+          name: Switch to light mode
+
+#theme:
+#  name: bootstrap386
+
+#theme:
+#  name: simple-blog
+
+#theme: 
+#  name: windmill-dark
