--- a/docTPI/mkdocs.yml
+++ b/docTPI/mkdocs.yml
@@ -1,13 +1,23 @@
 site_name: Documentations I.FA-P3B
 
+markdown_extensions:
+    - pymdownx.highlight:
+        anchor_linenums: true
+    - pymdownx.inlinehilite
+    - pymdownx.snippets
+    - pymdownx.superfences
+
 theme:
   name: material
+  features:
+    - content.code.copy
 
   palette:
   
       # Palette toggle for light mode
       - media: "(prefers-color-scheme: light)"
-        scheme: default
+        scheme: slate
+        primary: amber
         toggle:
           icon: material/brightness-7
           name: Switch to dark mode
@@ -15,10 +25,12 @@ theme:
       # Palette toggle for dark mode
       - media: "(prefers-color-scheme: dark)"
         scheme: slate
+        primary: deep purple
         toggle:
           icon: material/brightness-4
           name: Switch to light mode
 
+  
 #theme:
 #  name: bootstrap386
 
